# cookiecutter-python

./: check-project.sh  pyproject.toml
dev/: README.md  check-project.sh  pyproject.toml
hooks/: post_gen_project.py
template/: cookiecutter.json
template/{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  pyproject.toml
template/{{ cookiecutter.project_slug }}/tests/: test_main.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/: constants.py  errors.py  main.py
