[tool.poetry]
name = "cookiecutter-project"
version = "0.1.0"
description = ""
authors = ["Gnonpi <legnonpi@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
