[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["Denis Viviès <dvivies@bmat.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
loguru = "^0.6.0"
{%- if cookiecutter.use_cli == "yes" -%}
click = "^8.1.3"
{% endif %}

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.2"
mypy = "^0.950"

{%- if cookiecutter.use_cli == "yes" -%}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:cli"
{% endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
