[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["Denis Viviès <legnonpi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
loguru = "^0.7.0"
{%- if cookiecutter.use_cli == "yes" -%}
click = "^8.1.3"
{% endif %}

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
mypy = "^1.3.0"

{%- if cookiecutter.use_cli == "yes" -%}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:cli"
{% endif %}

[tool.pytest.ini_options]
addopts = "-ra --cov={{ cookiecutter.project_slug }}"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
